Se creó con Colab

--- a/men623__gestion_adpatativa.ipynb
+++ b/men623__gestion_adpatativa.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrBQdySNjpjClnK4UPK2/L",
+      "authorship_tag": "ABX9TyPXwe0AXupJLO/sh9RurppV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,54 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jcmachicao/pucp__gobierno_sistemas_proyectos/blob/main/men623__gestion_adpatativa.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Introducción a la Gestión Adaptativa de Proyectos"
+      ],
+      "metadata": {
+        "id": "07miviTHCvwE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🎯 Supuestos básicos del proyecto:\n",
+        "Beneficio objetivo fijo: 100 unidades (pueden representar valor económico, impacto, etc.).\n",
+        "\n",
+        "2 entregables: Entregable A y Entregable B.\n",
+        "\n",
+        "Cada enfoque medirá el progreso hacia ese beneficio, ajustando el alcance ligeramente si es necesario.\n",
+        "\n",
+        "🧠 Enfoque general del código:\n",
+        "Creamos una clase base Proyecto, luego derivamos:\n",
+        "\n",
+        "ProyectoEVM – aplica el modelo de Valor Ganado.\n",
+        "\n",
+        "ProyectoAgile – mide progreso basado en iteraciones y entrega de valor.\n",
+        "\n",
+        "ProyectoOKR – mide el avance de los resultados clave.\n",
+        "\n",
+        "El código usa una estructura simplificada para mostrar comparativamente cómo cada enfoque trata beneficio, avance y flexibilidad del alcance."
+      ],
+      "metadata": {
+        "id": "cFai2TaYCjQQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "✅ Qué permite este enfoque:\n",
+        "Comparar cómo cada enfoque mide el progreso.\n",
+        "\n",
+        "Simular ajustes en el alcance entregado mientras el beneficio objetivo se mantiene.\n",
+        "\n",
+        "Evaluar desempeño (coste-eficiencia en EVM, velocidad en Agile, alineación en OKR)."
+      ],
+      "metadata": {
+        "id": "VQvFiv8yChFB"
+      }
     },
     {
       "cell_type": "code",
