--- a/men623__deteccion_avance_molecula.ipynb
+++ b/men623__deteccion_avance_molecula.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmT20hu/RirnL3XBMfFUCT",
+      "authorship_tag": "ABX9TyOQ/S5jBAm9OyRhY8WgsJZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,12 +45,12 @@
       "metadata": {
         "id": "YCEMxsoHtcZI"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "1KEDOT_atVyM"
       },
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "S2uIFCuHtm3W"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "id": "ZV8qMxpstsOP",
         "outputId": "03c83340-80a9-42ea-bf74-fe0abf9559ee"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,6 +140,170 @@
             "  }\n",
             "}\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Enfoque Agil (Agile Approach)"
+      ],
+      "metadata": {
+        "id": "aw9SglxCAFcT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{\n",
+        "  \"backlog\": [\n",
+        "    {\n",
+        "      \"epica\": \"obras_civiles\",\n",
+        "      \"historias\": [\n",
+        "        {\n",
+        "          \"id\": \"OC-1\",\n",
+        "          \"descripcion\": \"Como ingeniero, quiero la cimentación construida para soportar la estructura.\",\n",
+        "          \"tareas\": [\n",
+        "            \"Excavación de terreno\",\n",
+        "            \"Colocación de acero\",\n",
+        "            \"Vaciado de concreto\",\n",
+        "            \"Curado y desmolde\"\n",
+        "          ],\n",
+        "          \"estado\": \"pendiente\",\n",
+        "          \"sprint\": 1\n",
+        "        },\n",
+        "        {\n",
+        "          \"id\": \"OC-2\",\n",
+        "          \"descripcion\": \"Como supervisor, quiero la estructura metálica montada para continuar con el equipamiento.\",\n",
+        "          \"tareas\": [\n",
+        "            \"Montaje de columnas\",\n",
+        "            \"Instalación de vigas\",\n",
+        "            \"Revisión de nivelación\"\n",
+        "          ],\n",
+        "          \"estado\": \"pendiente\",\n",
+        "          \"sprint\": 2\n",
+        "        }\n",
+        "      ]\n",
+        "    }\n",
+        "  ]\n",
+        "}\n"
+      ],
+      "metadata": {
+        "id": "kQlkQYlbAEio"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Enfoque OKR"
+      ],
+      "metadata": {
+        "id": "X-yQZG9mAKYs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{\n",
+        "  \"okr\": {\n",
+        "    \"objective\": \"Finalizar obras civiles de base en 3 semanas para habilitar montaje\",\n",
+        "    \"key_results\": [\n",
+        "      {\n",
+        "        \"descripcion\": \"Completar cimentación estructural con inspección aprobada\",\n",
+        "        \"medida\": \"Entregable OC-1 completado\",\n",
+        "        \"estado\": \"en_progreso\"\n",
+        "      },\n",
+        "      {\n",
+        "        \"descripcion\": \"Montar estructura metálica y dejar lista para equipamiento\",\n",
+        "        \"medida\": \"Entregable OC-2 aprobado\",\n",
+        "        \"estado\": \"pendiente\"\n",
+        "      }\n",
+        "    ]\n",
+        "  }\n",
+        "}\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_qQk6AgsAMFy",
+        "outputId": "bc917547-0f2e-4070-ffc2-58304813fd11"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'okr': {'objective': 'Finalizar obras civiles de base en 3 semanas para habilitar montaje',\n",
+              "  'key_results': [{'descripcion': 'Completar cimentación estructural con inspección aprobada',\n",
+              "    'medida': 'Entregable OC-1 completado',\n",
+              "    'estado': 'en_progreso'},\n",
+              "   {'descripcion': 'Montar estructura metálica y dejar lista para equipamiento',\n",
+              "    'medida': 'Entregable OC-2 aprobado',\n",
+              "    'estado': 'pendiente'}]}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "{\n",
+        "  \"okr\": {\n",
+        "    \"objective\": \"Habilitar infraestructura robusta y certificada para soportar operación continua de la planta durante al menos 10 años sin intervenciones mayores\",\n",
+        "    \"key_results\": [\n",
+        "      {\n",
+        "        \"descripcion\": \"Cimentación estructural terminada con pruebas de carga aprobadas\",\n",
+        "        \"medida\": \"Informe estructural validado por inspección externa\",\n",
+        "        \"estado\": \"en_progreso\"\n",
+        "      },\n",
+        "      {\n",
+        "        \"descripcion\": \"Estructura metálica montada con tolerancia de nivelación < 1 cm\",\n",
+        "        \"medida\": \"Informe topográfico post-montaje\",\n",
+        "        \"estado\": \"pendiente\"\n",
+        "      },\n",
+        "      {\n",
+        "        \"descripcion\": \"Documentación técnica entregada y firmada por interventoría\",\n",
+        "        \"medida\": \"Checklist firmado de entrega técnica\",\n",
+        "        \"estado\": \"pendiente\"\n",
+        "      }\n",
+        "    ]\n",
+        "  }\n",
+        "}\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jf6XCzxvASPa",
+        "outputId": "20d11d00-1b65-44b1-eea4-4aede3fce53b"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'okr': {'objective': 'Habilitar infraestructura robusta y certificada para soportar operación continua de la planta durante al menos 10 años sin intervenciones mayores',\n",
+              "  'key_results': [{'descripcion': 'Cimentación estructural terminada con pruebas de carga aprobadas',\n",
+              "    'medida': 'Informe estructural validado por inspección externa',\n",
+              "    'estado': 'en_progreso'},\n",
+              "   {'descripcion': 'Estructura metálica montada con tolerancia de nivelación < 1 cm',\n",
+              "    'medida': 'Informe topográfico post-montaje',\n",
+              "    'estado': 'pendiente'},\n",
+              "   {'descripcion': 'Documentación técnica entregada y firmada por interventoría',\n",
+              "    'medida': 'Checklist firmado de entrega técnica',\n",
+              "    'estado': 'pendiente'}]}}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
